--- a/index.html
+++ b/index.html
@@ -68,5 +68,17 @@
         </div>
       </section>
     </main>
+
+    <footer class="attribution">
+      Challenge by
+      <a
+        href="https://www.frontendmentor.io/challenges/3column-preview-card-component-pH92eAR2-/hub/3column-preview-card-component-7IdbZVZyQm"
+        target="_blank"
+        >Frontend Mentor</a
+      >. Coded by
+      <a href="https://www.frontendmentor.io/profile/MarcoPozo" target="_blank"
+        >Marco Pozo</a
+      >.
+    </footer>
   </body>
 </html>
